Memperbaiki fitur ubah sandi

--- a/ubahSandi.html
+++ b/ubahSandi.html
@@ -16,13 +16,13 @@
                 <h3>Change Your Password</h3>
             </legend>
 
-            <label for="uname">
-                Username :
-                <input type="text" id='uname' name='uname'>
+            <label for="oldPasswd">
+                Password Lama :
+                <input type="password" id='oldPasswd' name='oldPasswd' autofocus>
             </label>
-            <label for="passwd">
-                Password :
-                <input type="password" name="passwd" id="passwd">
+            <label for="newPasswd">
+                Password Baru:
+                <input type="password" name="newPasswd" id="newPasswd">
             </label>
             <button type="submit">Ubah</button>
         </fieldset>
