Mengubah konsep dari tambah akun user menjadi sign-up akun baru

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body>
     <h1>Welcome To Our Site's Home Page</h1>
-    <h2><a href="/login">Login</a></h2>
+    <h2><a href="/login">Log-In</a></h2>
+    <h2><a href="/signup">Sign-Up</a></h2>
 </body>
 
 </html>
