--- a/login.html
+++ b/login.html
@@ -28,6 +28,9 @@
             <button type="submit">Login!</button>
         </fieldset>
     </form>
+    <p>
+        <a href="/home">Kembali Ke Home Page</a>
+    </p>
 </body>
 
 </html>
