--- a/signup.html
+++ b/signup.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Selamat Datang di Halaman Tambah Akun User</h1>
+    <h1>Selamat Datang di Halaman Sign-In</h1>
     <form action="" method="post">
         <fieldset>
             <legend>
@@ -28,6 +28,9 @@
             <button type="submit">Add Account</button>
         </fieldset>
     </form>
+    <p>
+        <a href="/home">Kembali Ke Home Page</a>
+    </p>
 </body>
 
 </html>
